# WindowsWaterMark

./: .gitattributes  README.md  Watermelon.lnk  Watermelon.py  Watermelon.spec  WindowsWaterMark.lnk  main.lnk  main.py  text.json
docs/: usage.md
src/C++/: CMakeLists.txt  doconfig.cpp  doconfig.h  main.cpp  widget.cpp  widget.h
src/Python/: WindowsWaterMark.py
